[4786fed7f3dbf1f664871551b51e46bb16a18ec5]: Merge pull request #145 from DeveloperCielo/tsaitobraspag-patch-81
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -955,16 +955,16 @@ Abaixo especificamos qualquer diferença existente:</p>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
       <td>Booleano</td>
-      <td>true ou false</td>
+      <td>-</td>
       <td>Não</td>
-      <td><em>true</em> se o cartão foi armazenado e é seu primeiro uso.<br /><em>false</em> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
       <td>Texto</td>
-      <td>25</td>
+      <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><em>CredentialOnFile</em> - Compra pontual (ex. compra com um clique)<br /><em>Recurring</em> - Compra recorrente programada (ex. assinaturas)<br /><em>UnscheduledCredentialOnFile</em> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
     </tr>
   </tbody>
 </table>
@@ -1582,16 +1582,16 @@ Abaixo especificamos qualquer diferença existente:</p>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
       <td>Booleano</td>
-      <td>true ou false</td>
+      <td>-</td>
       <td>Não</td>
-      <td><em>true</em> se o cartão foi armazenado e é seu primeiro uso.<br /><em>false</em> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
       <td>Texto</td>
-      <td>25</td>
+      <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><em>CredentialOnFile</em> - Compra pontual (ex. compra com um clique)<br /><em>Recurring</em> - Compra recorrente programada (ex. assinaturas)<br /><em>UnscheduledCredentialOnFile</em> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
     </tr>
   </tbody>
 </table>
@@ -2025,16 +2025,16 @@ Abaixo especificamos qualquer diferença existente:</p>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
       <td>Booleano</td>
-      <td>true ou false</td>
+      <td>-</td>
       <td>Não</td>
-      <td><em>true</em> se o cartão foi armazenado e é seu primeiro uso.<br /><em>false</em> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
       <td>Texto</td>
-      <td>25</td>
+      <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><em>CredentialOnFile</em> - Compra pontual (ex. compra com um clique)<br /><em>Recurring</em> - Compra recorrente programada (ex. assinaturas)<br /><em>UnscheduledCredentialOnFile</em> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
     </tr>
   </tbody>
 </table>
