[d0668c35ee7c99cc16b530d6075073e7dc8af547]: Merge pull request #149 from DeveloperCielo/tsaitobraspag-patch-85
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -964,7 +964,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
@@ -1591,7 +1591,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
@@ -2034,7 +2034,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)</td>
+      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
