[d41893129f7c5029fdfe824a75fb2c479d45f7cb]: Merge pull request #151 from DeveloperCielo/tsaitobraspag-patch-87
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -365,7 +365,7 @@
 
 <p>Neste passo, é implementado o <em>script</em> e o mapeamento de <em>classes</em> responsáveis pela comunicação com as plataformas de autenticação das bandeiras e emissor. Siga o exemplo abaixo, que demonstra a implementação básica. Recomenda-se que o trecho seja colocado no final do código HTML de seu checkout:</p>
 
-<p>Para baixar o código, acesse: <a href="https://bit.ly/2oUaTGD">https://bit.ly/2oUaTGD</a></p>
+<p>Para baixar o código, <a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/_i18n/pt/_posts/emv3ds/exemplo.html">Acesse aqui</a></p>
 
 <p><img src="https://developercielo.github.io/images/exemplo-html.jpg" alt="Fluxo 3DS 2.0" /></p>
 
