[97415665cbddae1f55dc5445b2f01a58280b88bb]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -2399,7 +2399,7 @@ Abaixo são descritos todos os campos retornados, assim como suas definições e
     </tr>
     <tr>
       <td><code class="highlighter-rouge">created_date</code></td>
-      <td>Data da criação do pedido - <code class="highlighter-rouge">dd/MM/yyyy HH:mm:ss</code></td>
+      <td>Data da criação do pedido - <code class="highlighter-rouge">dd-MM-yyyy HH:mm:ss</code></td>
       <td>Alfanumérico</td>
       <td>20</td>
     </tr>
