--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -801,8 +801,8 @@ Abaixo especificamos qualquer diferença existente:</p>
          </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="s2">"12/2030"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
      </span><span class="p">}</span><span class="w">
@@ -833,8 +833,8 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"ExpirationDate"</span>:<span class="s2">"12/2030"</span>,
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
      <span class="o">}</span>
@@ -953,18 +953,18 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
-      <td>Booleano</td>
-      <td>-</td>
-      <td>Não</td>
-      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
+      <td><strong>First</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>Used</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
+      <td>Texto</td>
+      <td>-</td>
+      <td>Não</td>
+      <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
@@ -988,8 +988,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="w"> </span><span class="s2">"12/2030"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -1046,8 +1046,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"ExpirationDate"</span>: <span class="s2">"12/2030"</span>,
             <span class="s2">"SaveCard"</span>: <span class="nb">false</span>,
             <span class="s2">"Brand"</span>: <span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
@@ -1212,8 +1212,8 @@ Abaixo especificamos qualquer diferença existente:</p>
          </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="s2">"false"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
      </span><span class="p">}</span><span class="w">
@@ -1271,8 +1271,8 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
          <span class="s2">"SaveCard"</span>:<span class="s2">"false"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
      <span class="o">}</span>
@@ -1580,18 +1580,18 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
-      <td>Booleano</td>
-      <td>-</td>
-      <td>Não</td>
-      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
+      <td><strong>First</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>Used</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
+      <td>Texto</td>
+      <td>-</td>
+      <td>Não</td>
+      <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
@@ -1637,8 +1637,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="w"> </span><span class="s2">"12/2030"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -1713,8 +1713,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"ExpirationDate"</span>: <span class="s2">"12/2030"</span>,
             <span class="s2">"SaveCard"</span>: <span class="nb">false</span>,
             <span class="s2">"Brand"</span>: <span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
@@ -1855,8 +1855,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="s2">"12/2030"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">}</span><span class="w">
@@ -1889,8 +1889,8 @@ Abaixo especificamos qualquer diferença existente:</p>
          <span class="s2">"ExpirationDate"</span>:<span class="s2">"12/2030"</span>,
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
          <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
       <span class="o">}</span>
@@ -2023,18 +2023,18 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Used</code></td>
-      <td>Booleano</td>
-      <td>-</td>
-      <td>Não</td>
-      <td><strong>true</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>false</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
-    </tr>
-    <tr>
-      <td><code class="highlighter-rouge">CreditCard.StoredCredentials.Reason</code></td>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usege</code></td>
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Indica o propósito de armazenamento de cartões.<br /><strong>CredentialOnFile</strong> - Compra pontual (ex. compra com um clique)<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>UnscheduledCredentialOnFile</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
+      <td><strong>First</strong> se o cartão foi armazenado e é seu primeiro uso.<br /><strong>Used</strong> se o cartão foi armazenado e ele já foi utilizado anteriormente em outra transação</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CreditCard.CardOnFile.Reason</code></td>
+      <td>Texto</td>
+      <td>-</td>
+      <td>Não</td>
+      <td>Indica o propósito de armazenamento de cartões, caso o campo “Usage” for “Used”.<br /><strong>Recurring</strong> - Compra recorrente programada (ex. assinaturas)<br /><strong>Unscheduled</strong> - Compra recorrente sem agendamento (ex. aplicativos de serviços)<br /><a href="https://developercielo.github.io/faq/faq-api-3-0#pagamento-com-credenciais-armazenadas">Veja Mais</a></td>
     </tr>
   </tbody>
 </table>
@@ -2061,8 +2061,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="s2">"12/2030"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"SaveCard"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Brand"</span><span class="p">:</span><span class="s2">"Visa"</span><span class="p">,</span><span class="w">
-         </span><span class="s2">"StoredCredentials"</span><span class="p">:{</span><span class="w">
-            </span><span class="s2">"Used"</span><span class="p">:</span><span class="kc">false</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardOnFile"</span><span class="p">:{</span><span class="w">
+            </span><span class="s2">"Usege"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Used"</span><span class="p">,</span><span class="w">
             </span><span class="s2">"Reason"</span><span class="p">:</span><span class="s2">"CredentialOnFile"</span><span class="w">
          </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
@@ -2112,8 +2112,8 @@ Abaixo especificamos qualquer diferença existente:</p>
             <span class="s2">"ExpirationDate"</span>:<span class="s2">"12/2030"</span>,
             <span class="s2">"SaveCard"</span>:false,
             <span class="s2">"Brand"</span>:<span class="s2">"Visa"</span>,
-         <span class="s2">"StoredCredentials"</span>:<span class="o">{</span>
-            <span class="s2">"Used"</span>:false,
+         <span class="s2">"CardOnFile"</span>:<span class="o">{</span>
+            <span class="s2">"Usege"</span>: <span class="s2">"Used"</span>,
             <span class="s2">"Reason"</span>:<span class="s2">"CredentialOnFile"</span>
          <span class="o">}</span>
         <span class="o">}</span>,
